--- a/client/main.less
+++ b/client/main.less
@@ -1,1 +1,5 @@
 @import "{}/imports/ui/stylesheets/not-found.less";
+@import "{}/imports/ui/stylesheets/materialize2.less";
+@import "{}/imports/ui/stylesheets/materialize.less";
+@import "{}/imports/ui/stylesheets/style.less";
+@import "{}/imports/ui/stylesheets/theme-blue.less";
