--- a/imports/ui/layouts/body/body.html
+++ b/imports/ui/layouts/body/body.html
@@ -1,3 +1,9 @@
 <template name="App_body">
-  {{> Template.dynamic template=main}}
+{{>headBar}}
+{{>sideBar}}
+<section class="content">
+    <div class="container-fluid">
+        {{> Template.dynamic template=main}}
+    </div>
+</section>
 </template>
